@@ -1,4 +1,5 @@
 Changes relative to tre-0.20:
+  * PHP classes may inherit.
   * Removed obsolete JavaScript DOM features:
     * GET-CANVAS-BY-CLASS-NAME
     * ancestor getters
